# job-application-tool

./: .gitignore  README.md  app.py  pyproject.toml
docs/: product-spec.md
jobtool/: ai_modes.py  career_path.py  documents.py  models.py  pipeline.py  security.py  tracker.py  workbook.py
jobtool/sources/: search_links.py
src/jobtool/: job_parser.py  tailor.py
tests/: test_command_center.py  test_tailor.py  test_tracker.py
