[project]
name = "job-application-tool"
version = "0.1.0"
description = "Local resume tailoring + job application tracker"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.36.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.2",
    "pypdf>=4.2.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
test = ["pytest>=8.2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
