[project]
name = "job-application-tool"
version = "0.1.0"
description = "Local resume tailoring + job application tracker"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.36.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.2",
    "pypdf>=4.2.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.2.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["jobtool*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
